Improve signature reading

--- a/ÖvergripandeBemanningBro-v3.0.2/ÖvergripandeBemanningBro-v3.0.2.csproj
+++ b/ÖvergripandeBemanningBro-v3.0.2/ÖvergripandeBemanningBro-v3.0.2.csproj
@@ -28,7 +28,7 @@
 
   <ItemGroup>
     <Content Include="database1.db">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
 
